<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ShowInvitations"
    tools:showIn="@layout/app_bar_show_invitations">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/textView_date_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/input_date" />

            <TextView
                android:id="@+id/textView_time_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/input_time" />

            <TextView
                android:id="@+id/textView_participants_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/input_participants" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_invitations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/textView_info_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_alert"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/textView_info_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_delete"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>